trying to fix gap between header and userpage background

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,5 +3,12 @@
 }
 
 header {
+    width: 100%;
     display: block;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    margin-top: 0;
 }
